public/assets/css/main.css
/* ... */
.hero_text{
    width: 100%;
}

.hero_text .hero_title{
    font-size: 45px;
    color: var(--primaryColor-1);
    font-family: var(--primaryFont-semibold);
    width: 100%;
}
.hero_text .hero_subtitle{
    font-size: 40px;
    color: var(--greyShade-1);
    font-family: var(--primaryFont-regular);
    line-height: 55px;
    width: 70%;
   
}
.hero_text .hero_desc-text{
    width: 100%;
    color: var(--greyShade-2);
    font-family: var(--secondaryFont-regular);
    font-size: 1rem;
}
.hero_img{
    width: 90%;
}
.cust_btn-2{
    font-family: var(--secondaryFont-regular);
    background-color: var(--bg-white);
    border: 1px solid var(--primaryColor-1);
    border-radius: 25px;
    color: var(--primaryColor-1);
    padding: .5rem 1rem;

}
.cust_btn-2 a{
    border: none;
    color: var(--primaryColor-1);

}
.trending_section{
    margin-top: 60px;
}
.trending_hero{
    background-image: url("../img/landing_page/trending-hero.svg");
    object-position: center;
    background-repeat: no-repeat;
    background-size: contain;
    width: 100%;
    min-height: 700px;
    padding-top: 3rem;
}
.trending_hero-title{
    color: var(--secondaryColor-1);
    font-size: 25px;
    font-family: var(--primaryFont-bold);
}
.cust-container{
    padding: 0 2rem !important;
    margin-top: 3%;
}
.item .card {
    border-radius: 15px !important;
    border: none !important;
    max-width: 540px;
    min-height: 300px;
    
}
.cust_card-img {
    min-height: 300px !important; 
    object-fit:cover !important; 
    object-position: center !important; 
}
.cust_card-body{
    padding-left: 1.5rem !important;
}
.cust_card-title{
    font-size: 25px;
    color: var(--primaryColor-1s);
    font-family: var(--primaryFont-regular);
    padding: 2rem 0 1rem 0;
 
}
.cust_card-text{
    font-family: var(--primaryFont-regular);
    font-size: 16px;
    color: var(--greyShade-3);
}

.story-slider-dot  {
    color: var(--accentColor-1)!important
}

.cust_card-text .story-slider-dot  {
    color: var(--primaryColor-1)!important;
    font-size: 28px!important;
}



.cust_card-text .story-card-dot  {
    color: var(--primaryColor-1)!important;
    font-size: 20px!important;
}


.cust_card-tex{
    font-size: .9rem;
    width: 80% !important;
    display: none;
}
.card_btns{
   margin-top: 6rem !important;
}
.text-mute{
    color: var(--greyShade-3);
    font-family: var(--secondaryFont-regular) !important;
}
 .text-mute span i{
    color: var(--greyShade-2) !important;
    font-family: var(--secondaryFont-bold) !important;
}
.faq_img{
    width: 100%;
}
.sn{
    color: var(--primaryColor-1);
    font-size: 90px !important;
    font-family: var(--primaryFont-regular);
}
.faq_title{
    color: var(--greyShade-1);
    font-family: var(--primaryFont-regular);
    font-size: 25px;

}
.faq_desc{
    color: var(--greyShade-2);
    font-family: var(--secondaryFont-regular);
    font-size: .8rem;
    text-align: justify;
}
.faq-section{
    z-index: 10;
    padding-bottom: 5rem;
}
.what{
    margin-bottom: 12rem ;
    padding-top: 3rem ;
}

.donuts{
    width: 16%;
}
.vector{
    width: 16%;
}
.vector:nth-child(1){
    position: absolute;
    left: 9%;
    top: 310px;
    z-index: 40;
}
.vector:nth-child(2){
    position: absolute;
    right: 9%;
    top: 310px;
    z-index: 40;
}
.donuts:nth-child(1){
    position: absolute;
    top: -100px;
    left: -17%;
    z-index: 40;
}
.donuts:nth-child(2){
    position: absolute;
    left: -17%;
    top: 500px;
    z-index: 40;
}
.donuts:nth-child(3){
    position: absolute;
    left: 10%;
    top: 420px;
    z-index: 40;
}
.donuts:nth-child(4){
    position: absolute;
    right: -110px;
    top: 400px;
    z-index: 0;
}

.story-form-padding{
    padding:0 70px!important;
}

/* footer */
.footer_section{
    background-color: var(--bg-grey);
    min-height: 120px;
    width: 100%;
    margin: 0 auto;
    overflow: hidden;
}

.footer_container{
   margin-top: 3% !important;
}

.copyright{
    font-size: 1rem;
    color: var(--primaryColor-1);
}
/* index page ends */

/* read story page starts*/
.read_section{
    margin: 80px 0px;
    padding-top: 6rem;
}
.story_title{
    font-size: 2.5rem;
    font-family: var(--primaryFont-bold);
    color: var(--greyShade-1);
}
.author{
    font-size: 1.5rem;
    font-family: var(--primaryFont-regular);
}
.story_detials{
    margin: 0 0 40px 0;
    padding-bottom: 7rem !important;

}
.cover_img{
    width: 100% !important;
}
.horror{
    width: 100%;
}
.icons{
    width: 100%!important;
    display: inline !important;
}
.thumbs{
    width: 25%;
    cursor: pointer;
}
.quote-row{
    min-height: 200px;
}
.quote{
    width: 70% !important;
}
.quote_text{
    font-size: 1.1rem!important;
    font-family: var(--secondaryFont-regular) !important;

}
.quote_author{
    font-size: 1.2rem!important;
    font-family: var(--secondaryFont-bold) !important;
}
.full_story p{
    font-family: var(--primaryFont-regular) !important;
    font-size: 1rem !important;
}
.f-w{
    font-size: 1.5rem;
}
.story_stats{
    display: inline;
    
}
.story_stats small{
    font-family: var(--secondaryFont-regular);

}
.story_stats-section{
    margin-top:6rem !important;
}
.reaction{
    font-family: var(--secondaryFont-bold) !important;
    font-size: 1.3rem !important;
    color: var(--primaryColor-1);

}
.more{
    font-family: var(--secondaryFont-bold);
    font-size: 1rem;

}
.reaction_card{
    padding-left: 2rem !important;
}
.custom_card .card-title{
    font-family: var(--secondaryFont-bold);
    font-size: 1.05rem;
}
.custom_card small{
    font-family: var(--secondaryFont-bold);
    font-size: .8rem;
    color: var(--greyShade-1);
}
.custom-card_text{
    font-family: var(--secondaryFont-regular);
    font-size: .9rem;
    color: var(--greyShade-2);
}
.similiar_card{
    width: 100%;
}
.similiar_card .card-title{
    font-family: var(--primaryFont-bold);
    font-size: 1.15rem;
}
/* ... */

